fixed "Leisure Works" going out of screen at right

--- a/style.css
+++ b/style.css
@@ -734,7 +734,7 @@ body {
     position: relative;
     height: 130vh;
     top: 50%;
-    left: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     margin-top: 50px;
 }
